--- a/documents.css
+++ b/documents.css
@@ -236,7 +236,7 @@ ul.calendar {list-style-type: none;}
     width: 14%;
     height: 110px;
     text-align: left;
-    padding: 0 5px;
+    padding: 0 0.4% 0 0.7%;
     font-size:12px;
     margin: 0 -2.5px -2px -2.5px;
     color: black;
