--- a/FAQ.css
+++ b/FAQ.css
@@ -9,10 +9,10 @@
 div.background {
 	padding-top: 30px;
     background: #eb8d3a; /* For browsers that do not support gradients */
-    background: -webkit-linear-gradient(#72191b, #cc6032, #eb8d3a, #ffe066); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(#72191b, #cc6032, #eb8d3a, #ffe066); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(#72191b, #cc6032, #eb8d3a, #ffe066); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(#72191b, #cc6032, #eb8d3a, #ffe066); /* Standard syntax */
+    background: -webkit-linear-gradient(#72191b, #cc6032, #eb8d3a, #ffeb99); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#72191b, #cc6032, #eb8d3a, #ffeb99); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#72191b, #cc6032, #eb8d3a, #ffeb99); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#72191b, #cc6032, #eb8d3a, #ffeb99); /* Standard syntax */
 }
 
 div.attendee{
