--- a/main.css
+++ b/main.css
@@ -238,6 +238,18 @@ div.filler{
 	}
 }
 
+#backup-photo{
+  position: absolute;
+  top: -100px;
+  left:0;
+  min-width:100vw;
+  min-height:100vh;
+  width: auto;
+  height: auto;
+  z-index: -2;
+  background-image: url("Assets/FTCCoverPhoto.png");
+  background-size: cover;
+}
 /*///////////////////// ANIMATION END ////////////////////////*/
 
 
