--- a/main.css
+++ b/main.css
@@ -186,11 +186,20 @@ div.carousel-inner{
 	background: #F9ED61;
 }
 
+img.tr{
+	width: 70%;
+}
+
+img.ctf{
+	width: 60%;
+}
 
 img.slideshow{
 	width: 40%;
 	margin: 3% auto;
 }
+
+
 
 /* ///////////////////// MODIFYING BOOTSTRAP SLIDESHOW /////////////////////*/
 .carousel-control{
@@ -219,7 +228,6 @@ img.slideshow{
 	opacity: 0.3;
 }
 
-/* //////////////////////// MEDIA QUERIES ////////////////////////////*/
 /*///////////////////// SLIDESHOW END ////////////////////////*/
 
 
